--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,8 @@
+@media all and (max-width: 1400px){
+    .slide_down_icon a i {
+        font-size: 44px; 
+    }
+}
 @media all and (max-width: 1199px){
     .logo img {
         width: 175px;
@@ -17,6 +22,7 @@
     .subscribe_form input { 
         width: 251px; 
     }
+    
 }
 
 @media all and (min-width: 991px){
