--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -464,6 +464,19 @@
         line-height: 30px;
         margin: 8px 0;
     }
+    .form_hover { 
+        padding: 15px; 
+    }
+    .form_hover { 
+        max-width: 300px; 
+    }
+    .slider_carousel .owl-dots { 
+        left: 6px; 
+    }
+    .form_group textarea, .form_group input {
+ 
+        border-radius: 20px; 
+    }
     .slider_items h2 { 
         width: 100%;
         max-width: 267px;
