--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1311,7 +1311,7 @@ ul li a,a{
 }
 
 .global_award_area {
-	background: url(../images/global/bg.png) no-repeat fixed center center / cover; 
+	background: url(../images/global/bg.png) no-repeat scroll center center / cover; 
 }
 
 .global_title h4,
