--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -615,11 +615,10 @@ ul li a,a{
 .slider_carousel .owl-dots {
 	position: absolute;
 	bottom: 20px;
-	left: 0; 
-	display: flex;
-	margin: auto 0; 
+	left: 0;
+	display: flex; 
 	right: 0;
-	justify-content: center;
+	/* justify-content: center; */
 }
 
 .slider_carousel .owl-dot span {
@@ -643,7 +642,7 @@ ul li a,a{
 
 .slide_down_icon {
 	position: absolute;
-	bottom: 60px;
+	bottom: 35px;
 	z-index: 99;
 	left: 0;
 	right: 0;
